--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -481,11 +481,8 @@
   }
 
   .#{$text-input-group} {
-    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderStartStartRadius, var(--#{$text-input-group}--BorderRadius--base), 0);
-    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderStartEndRadius, 0, var(--#{$text-input-group}--BorderRadius--base));
-    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderEndEndRadius, 0, var(--#{$text-input-group}--BorderRadius--base));
-    @include pf-v6-bidirectional-style(--#{$text-input-group}--BorderEndStartRadius, var(--#{$text-input-group}--BorderRadius--base), 0);
-
+    --#{$text-input-group}--BorderStartEndRadius: 0;
+    --#{$text-input-group}--BorderEndEndRadius: 0;
     --#{$text-input-group}__utilities--c-button--PaddingInlineEnd: var(--#{$menu-toggle}--m-typeahead--c-text-input-group__utilities--c-button--PaddingInlineEnd);
     --#{$text-input-group}__utilities--MarginInlineEnd: 0;
 
