fix(MenuToggle): updated border placement on textinputgroup

--- a/src/patternfly/components/TextInputGroup/examples/TextInputGroup.css
+++ b/src/patternfly/components/TextInputGroup/examples/TextInputGroup.css
@@ -13,3 +13,7 @@
 #ws-core-c-text-input-group-search-input-group-advanced-search-expanded-with-autocomplete {
   height: 540px;
 }
+
+#ws-core-c-text-input-group-plain {
+  border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
+}
