--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -32,7 +32,7 @@
 }
 
 // - Table grid
-.#{$table}[class*="pf-m-grid"] {
+:where(:root, .#{$table}[class*="pf-m-grid"]) {
   // ============================================================ //
   // Start non-conformant variables
   //
