--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -593,6 +593,10 @@
       border-block-end: 0;
     }
   }
+
+  .#{$button} .#{$table}__sort-indicator {
+    --pf-v6-c-table__sort-indicator--MarginInlineStart: 0;
+  }
 }
 
 // - Table text
@@ -706,14 +710,16 @@
 .#{$table} .#{$table}__check,
 .#{$table} .#{$table}__toggle,
 .#{$table} .#{$table}__action,
-.#{$table} .#{$table}__favorite,
-.#{$table} th:where(.#{$table}__th).pf-m-favorite,
 .#{$table} .#{$table}__inline-edit-action,
 .#{$table} .#{$table}__draggable {
   --#{$table}--cell--MinWidth: 0;
   --#{$table}--cell--Width: 1%;
 }
 // stylelint-enable
+
+.#{$table} .#{$table}__favorite {
+  --#{$table}--cell--MaxWidth: auto;
+}
 
 // - Table toggle
 .#{$table}__toggle {
@@ -900,11 +906,14 @@
     }
   }
 
-  &.pf-m-selected .#{$table}__button {
+  &.pf-m-selected .#{$table}__button,
+  &.pf-m-selected .#{$button} {
     --#{$table}__sort-indicator--Color: var(--#{$table}__sort--m-selected__sort-indicator--Color);
 
     // override state colors on text
-    color: var(--#{$table}__sort--m-selected__button--Color);
+    .#{$table}__text {
+      color: var(--#{$table}__sort--m-selected__button--Color);
+    }
   }
 
   &.pf-m-help {
