--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -118,7 +118,6 @@
 
   // Split button
   --#{$menu-toggle}--m-split-button--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$menu-toggle}--m-split-button--PaddingInlineStart: var(--#{$pf-global}--spacer--xs);
 
   // Split button, child
   --#{$menu-toggle}--m-split-button--child--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
@@ -159,6 +158,7 @@
   --#{$menu-toggle}__button--PaddingRight: var(--#{$pf-global}--spacer--sm);
   --#{$menu-toggle}__button__controls--MarginRight: var(--#{$pf-global}--spacer--sm);
   --#{$menu-toggle}__button__controls--MarginLeft: var(--#{$pf-global}--spacer--sm);
+  --#{$menu-toggle}__button--m--text--PaddingInlineStart: var(--#{$pf-global}--spacer--xs);
 
   // Typeahead
   --#{$menu-toggle}--m-typeahead__controls--MarginRight: var(--#{$pf-global}--spacer--sm);
@@ -413,11 +413,6 @@
       }
     }
 
-    .pf-m-split-toggle-button {
-      display: flex;
-      padding-inline-start: var(--#{$menu-toggle}--m-split-button--PaddingInlineStart);
-    }
-
     // Split button, active
     &.pf-m-action {
       // stylelint-disable max-nesting-depth
@@ -570,12 +565,18 @@
   --#{$menu-toggle}__controls--MarginRight: var(--#{$menu-toggle}__button__controls--MarginRight);
   --#{$menu-toggle}__controls--MarginLeft: var(--#{$menu-toggle}__button__controls--MarginLeft);
 
+  display: inline-flex;
+  align-items: baseline;
   align-self: var(--#{$menu-toggle}__button--AlignSelf);
   padding-inline-start: var(--#{$menu-toggle}__button--PaddingLeft);
   padding-inline-end: var(--#{$menu-toggle}__button--PaddingRight);
   color: inherit;
   background-color: var(--#{$menu-toggle}__button--BackgroundColor);
   border: 0;
+
+  &.pf-m-text {
+    padding-inline-start: var(--#{$menu-toggle}__button--m--text--PaddingInlineStart);
+  }
 }
 
 .#{$menu-toggle}__icon {
