--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -4,7 +4,6 @@
   --#{$text-input-group}--BackgroundColor: var(--pf-t--global--background--color--control--default);
   --#{$text-input-group}--BorderColor: var(--pf-t--global--border--color--default);
   --#{$text-input-group}--BorderWidth: var(--pf-t--global--border--width--control--default);
-  --#{$text-input-group}--BorderRadius: var(--pf-t--global--border--radius--small);
 
   // Border hover
   --#{$text-input-group}--m-hover--BorderColor: var(--pf-t--global--border--color--hover);
@@ -15,10 +14,17 @@
   --#{$text-input-group}__main--RowGap: var(--pf-t--global--spacer--xs);
   --#{$text-input-group}__main--ColumnGap: var(--pf-t--global--spacer--xs);
 
-  // Chip group
-  --#{$text-input-group}--c-chip-group__main--PaddingBlockStart: var(--pf-t--global--spacer--xs);
-  --#{$text-input-group}--c-chip-group__main--PaddingInlineEnd: var(--pf-t--global--spacer--xs);
-  --#{$text-input-group}--c-chip-group__main--PaddingBlockEnd: var(--pf-t--global--spacer--xs);
+  // Text wrapper
+  --#{$text-input-group}__text--BorderRadius--base: var(--pf-t--global--border--radius--small);
+  --#{$text-input-group}__text--BorderStartStartRadius: var(--#{$text-input-group}__text--BorderRadius--base);
+  --#{$text-input-group}__text--BorderStartEndRadius: var(--#{$text-input-group}__text--BorderRadius--base);
+  --#{$text-input-group}__text--BorderEndEndRadius: var(--#{$text-input-group}__text--BorderRadius--base);
+  --#{$text-input-group}__text--BorderEndStartRadius: var(--#{$text-input-group}__text--BorderRadius--base);
+
+  // Label group
+  --#{$text-input-group}--c-label-group__main--PaddingBlockStart: var(--pf-t--global--spacer--xs);
+  --#{$text-input-group}--c-label-group__main--PaddingInlineEnd: var(--pf-t--global--spacer--xs);
+  --#{$text-input-group}--c-label-group__main--PaddingBlockEnd: var(--pf-t--global--spacer--xs);
 
   // Text input
   --#{$text-input-group}__text-input--PaddingBlockStart: var(--pf-t--global--spacer--sm);
@@ -52,16 +58,6 @@
   width: 100%; // when child of flex layout, take up space
   color: var(--#{$text-input-group}--Color, inherit);
   background-color: var(--#{$text-input-group}--BackgroundColor);
-  border-radius: var(--#{$text-input-group}--BorderRadius);
-
-  &::before {
-    position: absolute;
-    inset: 0;
-    pointer-events: none;
-    content: "";
-    border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
-    border-radius: var(--#{$text-input-group}--BorderRadius);
-  }
 
   &:hover {
     --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-hover--BorderColor);
@@ -79,8 +75,7 @@
     --#{$text-input-group}--BackgroundColor: transparent;
 
     .#{$text-input-group}__text {
-      &::before,
-      &::after {
+      &::before {
         border: 0;
       }
     }
@@ -99,13 +94,15 @@
   }
 
   > :first-child:not(.#{$text-input-group}__text) {
+    padding-block-start: var(--#{$text-input-group}__main--first-child--not--text-input--PaddingBlockStart);
+    padding-block-end: var(--#{$text-input-group}__main--first-child--not--text-input--PaddingBlockEnd);
     margin-inline-start: var(--#{$text-input-group}__main--first-child--not--text-input--MarginInlineStart);
   }
 
   .#{$label-group}__main {
-    padding-block-start: var(--#{$text-input-group}--c-chip-group__main--PaddingBlockStart);
-    padding-block-end: var(--#{$text-input-group}--c-chip-group__main--PaddingBlockEnd);
-    padding-inline-end: var(--#{$text-input-group}--c-chip-group__main--PaddingInlineEnd);
+    padding-block-start: var(--#{$text-input-group}--c-label-group__main--PaddingBlockStart);
+    padding-block-end: var(--#{$text-input-group}--c-label-group__main--PaddingBlockEnd);
+    padding-inline-end: var(--#{$text-input-group}--c-label-group__main--PaddingInlineEnd);
   }
 }
 
@@ -115,12 +112,16 @@
   grid-template-areas: "text-input";
   grid-template-columns: 1fr;
 
-  &::before,
-  &::after {
+  &::before {
     position: absolute;
     inset: 0;
     pointer-events: none;
     content: "";
+    border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
+    border-start-start-radius: var(--#{$text-input-group}__text--BorderStartStartRadius);
+    border-start-end-radius: var(--#{$text-input-group}__text--BorderStartEndRadius);
+    border-end-start-radius: var(--#{$text-input-group}__text--BorderEndStartRadius);
+    border-end-end-radius: var(--#{$text-input-group}__text--BorderEndEndRadius);
   }
 }
 
