--- a/src/patternfly/components/Label/label--colors.hbs
+++ b/src/patternfly/components/Label/label--colors.hbs
@@ -51,16 +51,16 @@
 <br><br>
 
 {{> label--variants
-    label--variants--title="Cyan"
-    label--variants--id=(concat "cyan-" label--colors--id)
-    label--color="cyan"}}
+    label--variants--title="Teal"
+    label--variants--id=(concat "teal-" label--colors--id)
+    label--color="teal"}}
 
 <br><br>
 
 {{> label--variants
-    label--variants--title="Gold"
-    label--variants--id=(concat "gold-" label--colors--id)
-    label--color="gold"}}
+    label--variants--title="Yellow"
+    label--variants--id=(concat "yellow-" label--colors--id)
+    label--color="yellow"}}
 
 <br><br>
 
