--- a/src/patternfly/components/Table/templates/table-tr--nested-column-header.hbs
+++ b/src/patternfly/components/Table/templates/table-tr--nested-column-header.hbs
@@ -2,7 +2,7 @@
   {{#> table-td table-td--data-label="Source"}}
     {{#> l-flex l-flex--modifier="pf-m-nowrap"}}
       {{#> l-flex-item}}
-        {{> label label--color="cyan" label-text--value="P"}}
+        {{> label label--color="teal" label-text--value="P"}}
       {{/l-flex-item}}
       {{#> l-flex-item l-flex-item--modifier="pf-m-flex-1"}}
         <span class="{{pfv}}table__text pf-m-truncate">
@@ -14,7 +14,7 @@
   {{#> table-td table-td--data-label="Destination"}}
     {{#> l-flex l-flex--modifier="pf-m-nowrap"}}
       {{#> l-flex-item}}
-        {{> label label--color="cyan" label-text--value="P"}}
+        {{> label label--color="teal" label-text--value="P"}}
       {{/l-flex-item}}
       {{#> l-flex-item l-flex-item--modifier="pf-m-flex-1"}}
         <span class="{{pfv}}table__text pf-m-truncate">
