--- a/src/patternfly/demos/Card/templates/card-demo--notification-drawer.hbs
+++ b/src/patternfly/demos/Card/templates/card-demo--notification-drawer.hbs
@@ -31,7 +31,7 @@
                     label-icon--value="info-circle"}}
                 {{> label
                     label--id="default-blue-icon"
-                    label--color="cyan"
+                    label--color="teal"
                     label-text--value="3"
                     label-icon--value="bell"}}
               {{/l-flex}}
