--- a/src/patternfly/demos/Card/templates/card-template-status.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-status.hbs
@@ -130,8 +130,8 @@
                       {{/label-group-list-item}}
                       {{#> label-group-list-item}}
                         {{> label
-                            label--id="default-cyan-icon"
-                            label--color="cyan"
+                            label--id="default-teal-icon"
+                            label--color="teal"
                             label-text--value="3"
                             label-icon--value="bell"}}
                       {{/label-group-list-item}}
